Cleanroom Game Version created
Now the launcher works with Clearoom

Window size of the game is 1024*768 by default

Fix Java args and you can download the java version you wants